--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Manage Customers</title>
+
+    <!-- CSS For Bootstrap -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
 </head>
 <body>
+
+<!-- JS For Bootstrap -->
+<script src="assets/js/bootstrap.min.js"></script>
 
 </body>
 </html>
