--- a/index.html
+++ b/index.html
@@ -8,7 +8,40 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
 </head>
-<body>
+<body class="bg-dark row w-100">
+
+<section class="col-4">
+
+    <div class="d-flex justify-content-center align-items-center">
+        <form class="w-75">
+            <div class="mb-3">
+                <label for="txtCusId" class="form-label text-light">Customer ID</label>
+                <input type="text" class="form-control" id="txtCusId">
+                <span></span>
+            </div>
+            <div class="mb-3">
+                <label for="txtCusName" class="form-label text-light">Customer Name</label>
+                <input type="text" class="form-control" id="txtCusName">
+                <span></span>
+            </div>
+            <div class="mb-3">
+                <label for="txtAddress" class="form-label text-light">Address</label>
+                <input type="text" class="form-control" id="txtAddress">
+                <span></span>
+            </div>
+            <div class="mb-3">
+                <label for="txtSalary" class="form-label text-light">Salary</label>
+                <input type="text" class="form-control" id="txtSalary">
+                <span></span>
+            </div>
+        </form>
+    </div>
+
+</section>
+
+<section class="col-8">
+
+</section>
 
 <!-- JS For Bootstrap -->
 <script src="assets/js/bootstrap.min.js"></script>
