--- a/index.html
+++ b/index.html
@@ -8,33 +8,43 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
 </head>
-<body class="bg-dark row w-100">
+<body class="bg-light w-100 h-100 row">
 
-<section class="col-4">
+<section class="col-12">
 
     <div class="d-flex justify-content-center align-items-center">
-        <form class="w-75">
-            <div class="mb-3">
-                <label for="txtCusId" class="form-label text-light">Customer ID</label>
+
+        <form class="w-75 row">
+
+            <div class="mb-3 mt-5 col-3">
+                <label for="txtCusId" class="form-label">Customer ID</label>
                 <input type="text" class="form-control" id="txtCusId">
                 <span></span>
             </div>
-            <div class="mb-3">
-                <label for="txtCusName" class="form-label text-light">Customer Name</label>
+            <div class="mb-3 mt-5 col-3">
+                <label for="txtCusName" class="form-label">Customer Name</label>
                 <input type="text" class="form-control" id="txtCusName">
                 <span></span>
             </div>
-            <div class="mb-3">
-                <label for="txtAddress" class="form-label text-light">Address</label>
+            <div class="mb-3 mt-5 col-3">
+                <label for="txtAddress" class="form-label">Address</label>
                 <input type="text" class="form-control" id="txtAddress">
                 <span></span>
             </div>
-            <div class="mb-3">
-                <label for="txtSalary" class="form-label text-light">Salary</label>
+            <div class="mb-3 mt-5 col-3">
+                <label for="txtSalary" class="form-label">Salary</label>
                 <input type="text" class="form-control" id="txtSalary">
                 <span></span>
             </div>
+
+            <div class="row mb-3 mt-2 justify-content-end">
+                <button class="me-2 col-1 btn btn-success">Save</button>
+                <button class="me-2 col-1 btn btn-warning">Update</button>
+                <button class="me-2 col-1 btn btn-danger">Delete</button>
+            </div>
+
         </form>
+
     </div>
 
 </section>
