--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
 </head>
-<body class="bg-light w-100 h-100 row">
+<body class="bg-light w-100 h-100 row justify-content-center">
 
+<!-- Form -->
 <section class="col-12">
 
     <div class="d-flex justify-content-center align-items-center">
@@ -37,7 +38,7 @@
                 <span></span>
             </div>
 
-            <div class="row mb-3 mt-2 justify-content-end">
+            <div class="row mb-5 mt-2 justify-content-end">
                 <button class="me-2 col-1 btn btn-success">Save</button>
                 <button class="me-2 col-1 btn btn-warning">Update</button>
                 <button class="me-2 col-1 btn btn-danger">Delete</button>
@@ -49,8 +50,23 @@
 
 </section>
 
-<section class="col-8">
+<!-- Table -->
+<section class="col-10">
+    <div class="row d-flex justify-content-center align-items-center overflow-auto mb-5 shadow-lg">
+        <table class="table table-hover" id="tblCustomer">
+            <thead class="bg-primary text-light table-bordered sticky-top">
+            <tr>
+                <th scope="col">Customer ID</th>
+                <th scope="col">Customer Name</th>
+                <th scope="col">Customer Address</th>
+                <th scope="col">Customer Salary</th>
+            </tr>
+            </thead>
+            <tbody>
 
+            </tbody>
+        </table>
+    </div>
 </section>
 
 <!-- JS For Bootstrap -->
